<resources>
    <string name="app_name">HawkEyeApp</string>
    <string name="bienvenidoText">¡Bienvenido!</string>
    <string name="codigVeriText">Código de verificación</string>
    <string name="expliCodiVeriText">Ingrese el codigo de verificación para completar el proceso</string>

    <string name="preguntaNum">¿Cuál es tu Número?</string>
    <string name="expliIniSes">Lo necesitamos  para buscar tu cuenta o ayudarte a crear una nueva</string>

    <string name="completemosRegi">Completemos su registro</string>
    <string name="verifiNum">Verifiquemos su Número</string>
    <string name="expliCompleRegi">Ingrese los siguientes campos con sus datos</string>

    <string name="codiIngreText">Código</string>
    <string name="numIngreText">Número</string>
    <string name="nombApe">Nombres y Apellidos</string>
    <string name="correoEle">Correo Electrónico</string>

    <string name="reenviarCod">Reenviar codigo</string>
    <string name="continueBtn">Continuar</string>

    <string name="mi_viaje">Mi viaje</string>
    <string name="historial">Viajes</string>
    <string name="perfil">Perfil</string>

    <string name="inivia">Registrar Viaje</string>
    <string name="expliCompleVia">Complete los siguientes campos requeridos</string>
    <string name="complevia">Datos de Viaje</string>
    <string name="partida">Origen</string>
    <string name="llegada">Destino</string>
    <string name="placa">Placa de Vehículo</string>
    <string name="aplicativo">Aplicativo</string>

    <string-array name="aplicativos_array">
        <item>inDriver</item>
        <item>Yango</item>
        <item>Uber</item>
        <item>Sonrisas</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>