<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:paddingVertical="20dp"
    tools:context=".ConfirmaActivity">


<androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/robotobold"
        android:text="@string/inivia"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/expliCompleVia"
        android:textColor="@color/griscl"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/veriText"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:hint="@string/partida"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/veriText2"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:hint="@string/llegada"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/veriText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/veriText3"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:hint="@string/placa"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/veriText2" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/veriText4"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:prompt="@string/aplicativo"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/veriText3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonIngresar"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:text="Registrar"
        android:textColor="@color/fondo"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/veriText4" />
</androidx.constraintlayout.widget.ConstraintLayout>
