<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".activities.ConfirmaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="36dp"
        android:background="@color/fondo">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewBienvenido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/robotoblack"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewBienvenido" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/robotobold"
            android:text="@string/completemosRegi"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView2"
            android:layout_width="320dp"
            android:layout_height="38dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/expliCompleRegi"
            android:textColor="@color/griscl"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView1" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/veriText"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:hint="@string/nombApe"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/veriText2"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:hint="@string/correoEle"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/veriText" />

        <com.example.hawkeyeapp.AnimaButton
            android:id="@+id/buttonIngresar"
            android:layout_width="320dp"
            android:layout_height="38dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/codigo_estilo"
            android:textAllCaps="false"
            android:fontFamily="@font/robotobold"
            android:text="@string/continueBtn"
            android:textColor="@color/fondo"
            android:textSize="16sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/veriText2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
